<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.mauritues.brume.bmtraffic.PhoneNumberActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="@string/tnc"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/verifySmsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/smsTxtBx"
        app:layout_constraintVertical_bias="0.847" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="16dp"
        android:gravity="center_horizontal"
        android:text="@string/prompt_sms"
        android:textColor="@android:color/black"
        android:textSize="13sp"
        app:fontFamily="@font/montserrat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline8" />

    <EditText
        android:id="@+id/smsTxtBx"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/sms_code"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="AutoFill"/>

    <!--<EditText
        android:id="@+id/editText3"
        android:layout_width="206dp"
        android:layout_height="4dp"
        android:background="#00c4cc"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="206dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="206dp"
        android:layout_height="4dp"
        android:background="@android:color/white"
        android:ems="10"
        android:inputType="textPersonName" />-->

    <Button
        android:id="@+id/verifySmsButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/disabled_button_rounded_corners"
        android:clickable="false"
        android:radius="30dp"
        android:text="@string/confirm"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline9" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/phone_2"
        tools:ignore="ContentDescription"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.36" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.79" />

</android.support.constraint.ConstraintLayout>
